--- a/tmux-gruvbox-dark.conf
+++ b/tmux-gruvbox-dark.conf
@@ -2,23 +2,23 @@
 set-option -g status "on"
 
 # default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style bg=#32302f,fg=#d4be98
 
 # default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=colour214,fg=colour237
 
 # default window with an activity alert
 set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
 
 # active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style bg=red,fg=colour237
 
 # pane border
 set-option -g pane-active-border-style fg=colour250 #fg2
 set-option -g pane-border-style fg=colour237 #bg1
 
 # message infos
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+set-option -g message-style bg=#32302f,fg=#d4be98 # bg=bg2, fg=fg1
 
 # writing commands inactive
 set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
@@ -36,16 +36,16 @@ set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-justify "left"
 set-option -g status-left-style none
-set-option -g status-left-length "80"
+set-option -g status-left-length "20"
 set-option -g status-right-style none
-set-option -g status-right-length "200"
+set-option -g status-right-length "250"
 set-window-option -g window-status-separator ""
 
-set-option -g status-left "#[bg=colour241,fg=colour248] #S #[bg=colour237,fg=colour241,nobold,noitalics,nounderscore]"
+set-option -g status-left "#[fg=#d4be98] #S#[fg=#32302f,nobold,noitalics,nounderscore]"
 # set-option -g status-right "#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] %Y-%m-%d  %H:%M #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore]#[bg=colour248,fg=colour237] #h "
-set-option -g status-right "#{mpd_now_playing} #[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour237,fg=colour239 nobold, nounderscore, noitalics]#[bg=colour239,fg=colour246] #{cpu_fg_color}  #{cpu_percentage}  #[fg=color5] #{battery_percentage}  #[fg=color14]#{clima} #[bg=colour239,fg=colour248,nobold,noitalics,nounderscore] #[bg=colour248,fg=colour237]  %a %d/%m %H:%M"
+set-option -g status-right "#[fg=#777777]#{mpd_now_playing} #[bg=#32302f,fg=#5b534d nobold, nounderscore, noitalics]#[bg=#5b534d] #{cpu_fg_color}  #{cpu_percentage}  #[fg=#d8a657,bg=#5b534d] #{battery_percentage}  #[fg=white,bg=#5b534d]#{clima} #[bg=#5b534d,fg=#32302f,nobold,noitalics,nounderscore] #[bg=#32302f,fg=white]  %a %d/%m %I:%M%p "
 
-set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,nobold,noitalics,nounderscore]#[bg=colour214,fg=colour239] #I #[bg=colour214,fg=colour239,bold] #W#{?window_zoomed_flag,*Z,} #[bg=colour237,fg=colour214,nobold,noitalics,nounderscore]"
-set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
+set-window-option -g window-status-current-format "#[bg=#a9b665,fg=#32302f,nobold,noitalics,nounderscore]#[bg=#a9b665,fg=#32302f] #I #[bg=#a9b665,fg=#32302f,bold] #W#{?window_zoomed_flag,*Z,} #[bg=#32302f,fg=#a9b665,nobold,noitalics,nounderscore]"
+set-window-option -g window-status-format "#[bg=#5b534d,fg=#32302f,noitalics]#[bg=#5b534d,fg=#d4be98] #I #[bg=#5b534d,fg=#d4be98] #W #[bg=#32302f,fg=#5b534d,noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
